adl-frontend/src/test/resources/unit/error/semantic/attributes/attr8.adl
primitive attributes.attr8(a) {
  attribute int intAttr = a;
}
